--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,13 +18,13 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v4
 
-    - name: Cache Node.js dependencies
-      uses: actions/cache@v4
-      with:
-        path: node_modules
-        key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
-        restore-keys: |
-          ${{ runner.os }}-node-modules-
+    # - name: Cache Node.js dependencies
+    #   uses: actions/cache@v4
+    #   with:
+    #     path: node_modules
+    #     key: ${{ runner.os }}-node-modules-${{ hashFiles('**/package-lock.json') }}
+    #     restore-keys: |
+    #       ${{ runner.os }}-node-modules-
           
     - name: Install dependecies
       run: npm ci
