--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -11,16 +11,10 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    # strategy:
-    #   matrix:
-    #     node-version: [18.x, 20.x, 22.x]
-    #     # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v4
+
     - name: Use Node.js '23.x'
       uses: actions/setup-node@v4
       with:
@@ -46,13 +40,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Setup AWS CLI
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
-      - name: Sync files to S3 bucket
+
+      - name: Get the version tag
+        id: version
         run: |
-          aws s3 sync . s3://acebook-node-citation-bucket --delete --exclude ".github/*"
+          VERSION=$(git describe --tags --abbrev=0)  # Get the latest Git tag as the version
+          echo "VERSION=$VERSION" >> $GITHUB_ENV  # Store it as an environment variable
+
+      - name: Zip Files
+        run: zip -r "./builds/${VERSION}.zip" . -x "*.git*"
+
+      - name: Upload zip to S3
+        run: |
+          aws s3 cp "./builds/${VERSION}.zip" s3://your-bucket-name/path/to/upload/${VERSION}.zip
+      # - name: Sync files to S3 bucket
+      #   run: aws s3 sync . s3://acebook-node-citation-bucket --delete --exclude ".github/*"
+
 
