Adds codedeploy line to deploy-app action

--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -24,3 +24,5 @@ jobs:
           aws-region: eu-west-2
       - name: Sync zip to S3
         run: aws s3 cp app.zip s3://acebook-of-troy
+      - name: Deploy using AWS CodeDeploy
+        run: aws deploy create-deployment --application-name ${{ env.codedeployname }}-${{ env.environment }} --deployment-group-name ${{ env.codedeployname }}-${{ env.environment }} --deployment-config-name CodeDeployDefault.OneAtATime --github-location repository=${{ github.repository }},commitId=${{ github.sha }}
