--- a/.github/workflows/deploy-app.yml
+++ b/.github/workflows/deploy-app.yml
@@ -9,6 +9,11 @@ jobs:
   deploy-app:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    env:
+      CODEDEPLOY_NAME: acebook-of-troy
+      DEPLOYMENT_GROUP_NAME: production
+      BUCKET_NAME: acebook-of-troy
+      BUCKET_KEY: app.zip
     steps:
       - name: Checkout main
         uses: actions/checkout@v4
@@ -24,3 +29,5 @@ jobs:
           aws-region: eu-west-2
       - name: Sync zip to S3
         run: aws s3 cp app.zip s3://acebook-of-troy
+      - name: Deploy using AWS CodeDeploy
+        run: aws deploy create-deployment --application-name ${{ env.CODEDEPLOY_NAME }} --deployment-group-name ${{ env.DEPLOYMENT_GROUP_NAME }} --deployment-config-name CodeDeployDefault.OneAtATime --revision revisionType=S3,s3Location={bucket=${{ env.BUCKET_NAME }},key=${{ env.BUCKET_KEY }},bundleType=zip}
