created ci and cd pipelines

--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -9,6 +9,9 @@ jobs:
     runs-on: ubuntu-latest
     
     steps: 
+    - name: Checkout repo
+      uses: actions/checkout@v4
+      
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
