--- a/appspec.yml
+++ b/appspec.yml
@@ -2,9 +2,10 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ec2-user/acebook/
+    destination: /home/ec2-user/acebook
+file_exists_behaviour: OVERWRITE
 permissions:
-  - object: /home/ec2-user/acebook/
+  - object: /home/ec2-user/acebook
     pattern: "**"
     owner: ec2-user
     group: wheel
