--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -70,9 +70,9 @@ jobs:
           --source .
       - name: Trigger CodeDeploy deployment
         run: |
-          aws deploy create-deployment \
-            --application-name acebook-citation-app \
-            --deployment-group-name acebook-citation-app \
-            --revision revisionType=S3,bucket=acebook-node-citation-bucket,key=app.zip,bundleType=zip \
-            --description "New version of app uploaded" \
-            --deployment-config-name CodeDeployDefault.AllAtOnce
+          aws deploy create-deployment 
+          --application-name acebook-citation-app 
+          --s3-location bucket=acebook-node-citation-bucket,key=app.zip,bundleType=zip,eTag=107ab2743156fcad6c0eeb39028f15ba 
+          --deployment-group-name acebook-citation-app 
+          --deployment-config-name CodeDeployDefault.AllAtOnce
+          --description new app
