updated CICD pipeline

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -74,5 +74,4 @@ jobs:
           --application-name acebook-citation-app \
           --s3-location bucket=acebook-node-citation-bucket,key=app.zip,bundleType=zip,eTag=107ab2743156fcad6c0eeb39028f15ba \
           --deployment-group-name acebook-citation-app \
-          --deployment-config-name CodeDeployDefault.AllAtOnce \
-          --description new app
+          --deployment-config-name CodeDeployDefault.AllAtOnce
