--- a/appspec.yml
+++ b/appspec.yml
@@ -12,9 +12,10 @@ hooks:
     - location: scripts/install_dependencies.sh
       timeout: 300
       runas: ec2-user
-  # AfterInstall:
-  #   - location: Scripts/RunResourceTests.sh
-  #     timeout: 180
+  AfterInstall:
+    - location: scripts/after_install.sh
+      timeout: 180
+      runas: ec2-user
   ApplicationStart:
     - location: scripts/start_server.sh
       timeout: 300
